# clownmdsdk

./: .gitignore  .gitmodules  README.md  dist.sh
example/: Makefile  main.cpp
example/block-game/: CMakeLists.txt  Makefile  main.cpp
example/cdc-test/: CMakeLists.txt  Makefile  cd-header.s  cdc-test.cpp  cdc-test.h  command.h  control-pad.h  disc.s  font.unc  graphics-test.cpp  graphics-test.h  hv-test.cpp  hv-test.h  ip.cpp  main-menu.cpp  main-menu.h  mode.h  sp.cpp  system.h  utility.cpp  utility.h
example/common/: control-pad-manager.h  joypad-manager.h
example/flto-bug/: Makefile  main.cpp
example/fm-test/: main.cpp
example/mega-cd/: Makefile  command.h  disc.s  ip.cpp  sp.cpp
example/mega-cd/ip/: Makefile  ip.cpp
example/mega-cd/sp/: Makefile  sp.cpp
example/plane-test/: main.cpp
example/template-cartridge/: CMakeLists.txt  Makefile  main.cpp
example/template-cd/: CMakeLists.txt  Makefile  disc.s  ip.cpp
example/template-mega-cd/: Makefile  ip.cpp  sp.cpp
example/tofu/: CMakeLists.txt  Makefile  controller.cpp  controller.h  coordinate.h  doubly-linked-list.cpp  doubly-linked-list.h  level.cpp  level.h  list-common.h  main.cpp  objects.cpp  objects.h  pool.cpp  pool.h  singly-linked-list.cpp  singly-linked-list.h  sprite.cpp  sprite.h
example/tofu/assets/: level.unc  palette.unc  tiles.unc
example/tofu/objects/: base.cpp  base.h  bullet.cpp  bullet.h  player.cpp  player.h
stage1/: .gitignore  README.md  binutils.sh
stage2/: .gitignore  DisableBrokenOptional.patch  FixMinGWClang.patch  README.md  gcc.sh
stage3/: README.md  as.sh  misc.sh
stage3/headers-and-scripts/: bare.mk  generic.mk  ip.ld  ip.mk  rom.ld  rom.mk  sp.mk
stage3/headers-and-scripts/include/: assert.h  clownmdsdk.h  cstdlib  md.h  stdlib.h
stage3/src/: Makefile  clear-bss.s  crtn.s  init-cartridge.s  init-ip.s  init.s  stdlib.c
stage3/src/z80/: .gitignore
stage4/: README.md  misc.sh
stage4/headers-and-scripts/: cartridge.cmake  cartridge.ld  cartridge.mk  generic.cmake  generic.mk  ip.cmake  ip.ld  ip.mk  iso-stub.s  sp.cmake  sp.ld  sp.mk  toolchain.cmake
stage4/headers-and-scripts/include/: assert.h  clownmdsdk.h  cstdlib  cstring  stdlib.h  string.h
stage4/headers-and-scripts/m68k-elf/include/: clownmdsdk.h  string.h
stage4/src/: Makefile  init-cartridge.s  init-sp.s  init-z80.asm  libm.c  stdlib.c  string.c  stubs-cartridge.s
stage4/src/z80/: build.lua
